<resources>
    <string name="app_name">HifiveSdk</string>



    <string name="hifivesdk_music_current_play">当前播放</string>
    <string name="hifivesdk_music_like">我的喜欢</string>
    <string name="hifivesdk_music_karaoke">我的K歌</string>
    <string name="hifivesdk_music_all_play">全部播放(%1$d)</string>
    <string name="hifivesdk_music_search_hint">搜索歌曲名/歌手</string>
    <string name="hifivesdk_music_search_cancel">取消</string>
    <string name="hifivesdk_music_search_history">搜索历史</string>
    <string name="hifivesdk_music_search_hot">热搜榜</string>
    <string name="hifivesdk_music_search_history_empty">未找到与“%1$s”相关的内容，向您推荐</string>
    <string name="hifivesdk_music_search_toast">请输入歌曲名/歌手</string>
    <string name="hifivesdk_music_add_like_msg">加入喜欢列表成功</string>
    <string name="hifivesdk_music_add_karaoke_msg">加入K歌列表成功</string>
    <string name="hifivesdk_comfirm_dialog_cancel">取消</string>
    <string name="hifivesdk_comfirm_dialog_comfirm">确认删除</string>
    <string name="hifivesdk_comfirm_dialog_delete">已删除</string>
    <string name="hifivesdk_comfirm_delete_music">确定将所选音乐从列表中删除？</string>
    <string name="hifivesdk_comfirm_delete_history">确定删除搜索历史？</string>

    <string name="hifivesdk_music_player_lyric">词</string>
    <string name="hifivesdk_music_player_accompany">伴奏</string>
    <string name="hifivesdk_music_player_sound">原声</string>
    <string name="hifivesdk_music_add_music">添加歌曲</string>

</resources>
