<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hifive_dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:background="@drawable/hifive_dialog_search_title_bg"
            android:paddingStart="12dp"
            android:paddingEnd="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@mipmap/hifivesdk_icon_music_search"/>
            <EditText
                android:id="@+id/et_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:imeOptions="actionSearch"
                android:inputType="text|textCapSentences"
                android:lines="1"
                android:maxLines="1"
                android:maxLength="50"
                android:background="@null"
                android:textSize="14sp"
                android:textColorHint="#666666"
                android:hint="@string/hifivesdk_music_search_hint"
                android:textColor="#FFFFFF"
                android:layout_weight="1"/>


            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="10dp"
                android:visibility="gone"
                android:src="@mipmap/hifivesdk_icon_music_delete"/>

        </LinearLayout>
        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:text="@string/hifivesdk_music_search_cancel"
            android:layout_marginStart="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingStart="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/hifivesdk_music_search_history"/>

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:visibility="gone"
                android:src="@mipmap/hifivesdk_icon_search_delete"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>

        <com.hfopenplayer.sdk.view.HifiveFlowLayout
            android:id="@+id/fl_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_hot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:padding="15dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:text="@string/hifivesdk_music_search_hot"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="134dp"
                android:layout_height="100dp"
                android:src="@mipmap/hifivesdk_icon_search_empty"/>

            <TextView
                android:id="@+id/tv_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:textColor="#FFC7C7CC"
                android:textSize="11sp"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/hifivesdk_music_search_history_empty"/>

        </LinearLayout>
        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_music"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:overScrollMode="never"
                        android:scrollbars="none"/>
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </LinearLayout>
</LinearLayout>